--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 
 /* Your CSS Code here. */
 #btn{
-	background-color:black;
-	color:white;
-	border-radius:5px;
-	border=none;
+	 background-color: black;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    padding: 10px 20px;
+/*     font-size: 16px; */
+    cursor: pointer;
 }
 #btn:hover{
 		background-color:yellow;
